Did a lot of naming changes and began on-demand.
Signed-off-by: H3ll Ruler <Michael Schmidt> <msrsps@hotmail.com>

--- a/data/JanusProperties.ini
+++ b/data/JanusProperties.ini
@@ -1,13 +1,19 @@
+# The different ports the server will use.
 JAGGRAB_SERVER_PORT=43595
 GAME_SERVER_PORT=43594
-LOGIN_SERVER_PORT=8000
 HTTP_SERVER_PORT=80
 
-LOGIN_SERVER_ADDRESS=localhost
+# Address to the cache.
+CACHE_FILE_DIRECTORY=data/cache/
 
-ARCHIVE_FILE_DIRECTORY=data/cache/
-
+# The revision the server is running.
 SERVER_REVISION=317
 
-! Must always be 3 or greater.
+# Must always be 3 or greater.
 ARCHIVE_THREADS=3
+
+# Must always be 2 or greater.
+GAME_NETWORK_THREADS=3
+
+# Must always be 1 or greater.
+ONDEMAND_WORKER_THREADS=1
