--- a/data/JanusProperties.ini
+++ b/data/JanusProperties.ini
@@ -16,7 +16,10 @@ ARCHIVE_THREADS=3
 WORLD_NETWORK_THREADS=8
 
 # Must always be 1 or greater.
-ONDEMAND_WORKER_THREADS=1
+ONDEMAND_SERVICE_THREADS=1
+
+# Must always be 1 or greater.
+LOGIN_SERVICE_THREADS=1
 
 # The MySql user and password.
 MYSQL_USER=janus
