Moved things around to work around the current design, the packet system is almost finished, player updating will be next.

--- a/lib/.gitignore
+++ b/lib/.gitignore
@@ -3,3 +3,7 @@
 /netty-3.5.3.Final.jar
 /isaac.jar
 /mysql-connector-java-5.1.20-bin.jar
+/xstream-1.4.3.jar
+/gson-2.2.2-sources.jar
+/gson-2.2.2.jar
+/src
